Updating gnosis manifest

--- a/src/other/install/per-chain/gnosis/manifest.json
+++ b/src/other/install/per-chain/gnosis/manifest.json
@@ -27107,6 +27107,230 @@
       "bloomSize": 131080,
       "indexHash": "QmS8opT6nowc7MNHzi85ocjEc4jLQJU7GCYsMcbEvdUzYh",
       "indexSize": 1836624
+    },
+    {
+      "range": "023758703-023763179",
+      "bloomHash": "QmPu65e77s8cCDyBHrRLLv9ZJJd56LXNsSFMFoT8rxNS1v",
+      "bloomSize": 131080,
+      "indexHash": "QmSZzK5DfuNH11nAazyudbEfRQYrnwBYjffAqBr5HNioCr",
+      "indexSize": 2282860
+    },
+    {
+      "range": "023763180-023767464",
+      "bloomHash": "QmWfvezoW6EFU4aShgCydnAPbUj3KsG14djF8LA23xrgGH",
+      "bloomSize": 131080,
+      "indexHash": "QmdfnYPcjEBFZtbJoZoPNfj93tzEDBKL2YTURxzTzJxQZy",
+      "indexSize": 2313524
+    },
+    {
+      "range": "023767465-023772332",
+      "bloomHash": "QmQciNEueSUat99r8hCWKLQJSTySP8RX22yduGMY9C1NLQ",
+      "bloomSize": 131080,
+      "indexHash": "QmRQrfSkQ6uu8MfmW5LCibsL92g1MeXFfFNJgDQT62wLqb",
+      "indexSize": 2243164
+    },
+    {
+      "range": "023772333-023776075",
+      "bloomHash": "QmZNL7w7b1adwiVv1cdvySzFZ3oybda2gdihJ3wZtLEsfo",
+      "bloomSize": 131080,
+      "indexHash": "QmUu7jbGkZRfEE8vFmz8yvC8BZJn4Tcs9RhxWpjKfFyJYm",
+      "indexSize": 2224848
+    },
+    {
+      "range": "023776076-023780651",
+      "bloomHash": "QmSxRvEPL3LtCvYg8k3UEj7KpG21opDDtgcuuqvor9qsjB",
+      "bloomSize": 131080,
+      "indexHash": "QmVFUkaa1hzfoRbrSQe2NQdsQsk1KNAxbC4cnCjQS7euwj",
+      "indexSize": 2276520
+    },
+    {
+      "range": "023780652-023785170",
+      "bloomHash": "QmP12UoQhTV35DTY78tTy42XMtakHWnBMTUUA4psGT1Shd",
+      "bloomSize": 131080,
+      "indexHash": "QmPKnJVCtf9ofpudvyu5x81ff32nDt5nvVr1PhHzGFDqTb",
+      "indexSize": 2275596
+    },
+    {
+      "range": "023785171-023790584",
+      "bloomHash": "QmZHvEa1DProYyTWyN946StrCT4b1s4DvhpzLyLuF6iWSm",
+      "bloomSize": 131080,
+      "indexHash": "QmeHyCYWNf4eXXb7A3G4S4EZAGVR23thZgtqhzf9ubvSBt",
+      "indexSize": 2239756
+    },
+    {
+      "range": "023790585-023795769",
+      "bloomHash": "QmNVqdZzBi5RjcMge7mVsQ852mX9ANduxQebNWdGcsfWem",
+      "bloomSize": 131080,
+      "indexHash": "QmSTE9LouTxrBij7VihS4xHBdgjWF5HhqAFNAsCYRgt4nd",
+      "indexSize": 2235728
+    },
+    {
+      "range": "023795770-023800179",
+      "bloomHash": "QmaCNRXY1bTQa7CF1vsiAJnSnpRafJVLos8cxTLyQQ3aNE",
+      "bloomSize": 131080,
+      "indexHash": "QmU9z8Z6v695NxU5gvnCNiVmGaDF35GFqGy3JykgnbQ5Wt",
+      "indexSize": 2223040
+    },
+    {
+      "range": "023800180-023803887",
+      "bloomHash": "Qmb5jFnQigkfE4H72yyqq6Dd82ogq3Mb5VFPBczjt1uAS4",
+      "bloomSize": 131080,
+      "indexHash": "QmRVeftxjDT6f6UE98bnCbZ8xDk1m59nKFbTPZ9vp5vLdW",
+      "indexSize": 2182672
+    },
+    {
+      "range": "023803888-023810046",
+      "bloomHash": "QmcKD4gvqEBVURzarGVWEkKnAsvEHLTsMLJpWcrdWKehKp",
+      "bloomSize": 131080,
+      "indexHash": "QmWG7K6kNLgJAMT5ie5xcsP5uknyvZ3wwseidT9FaBSA4z",
+      "indexSize": 2219008
+    },
+    {
+      "range": "023810047-023815333",
+      "bloomHash": "QmRnau59wDw2q1gE9pqiXxHDJnEyD2U5NhFrRzwpJhoTf3",
+      "bloomSize": 131080,
+      "indexHash": "QmQQVs8dyZ3D3V6vED3WgYdhf6RnLkswrQB8NDvURMojXy",
+      "indexSize": 2223340
+    },
+    {
+      "range": "023815334-023821604",
+      "bloomHash": "QmbUi3WJNgVd5Lk5ugyRhUixQTQUZh7JqU2mNzD1gd7bc3",
+      "bloomSize": 131080,
+      "indexHash": "QmfLkEPHoi1bubJTEv5S7NszkkVEBxrc8kRMFo7dVFSEcP",
+      "indexSize": 2229756
+    },
+    {
+      "range": "023821605-023827978",
+      "bloomHash": "QmZgmLfmTqPQ6fvhUESsqE7MLdq8jBr4LPcBU1jAoB4zU4",
+      "bloomSize": 131080,
+      "indexHash": "Qma4fKkDLVdwNF377oZsoa47L4GRU4kBvmeczT4pYXz7pG",
+      "indexSize": 2340816
+    },
+    {
+      "range": "023827979-023833161",
+      "bloomHash": "QmSaGvYXgPzXGE8zioak2xfKeyxiCVjaXaDDvichK5Gp8T",
+      "bloomSize": 131080,
+      "indexHash": "Qmf4BD7yDBfWkrH7smArnjpZmVfG3EnRPS12pQBhdM9YLG",
+      "indexSize": 2469120
+    },
+    {
+      "range": "023833162-023838700",
+      "bloomHash": "QmXM4jGNBmvekmVLjr7m8zpGm1aRNd8WKikGKtgcaZ37cq",
+      "bloomSize": 131080,
+      "indexHash": "QmPe2cHyG1A7QZBfZsqqsytErMUKPd1kd5JaUBeQgVvCFR",
+      "indexSize": 2307636
+    },
+    {
+      "range": "023838701-023845525",
+      "bloomHash": "QmfXPAJPbTSLDGP3pMtSVmLdKGyTMEijAPj2cjuJFf58ju",
+      "bloomSize": 131080,
+      "indexHash": "QmRqJvDeW1mKK6Z9oW2tKQPiikR9U4LqcTqHSCeQUBuqTJ",
+      "indexSize": 2254900
+    },
+    {
+      "range": "023845526-023850794",
+      "bloomHash": "QmRUeWHMR6UfCB3NwXzcXHJKPqTg95k6Nc1dvVcRW7NVUP",
+      "bloomSize": 131080,
+      "indexHash": "QmQDZmGFYDz1jK2J2xio2kjoSaLDZhavrJNqmsW1eHitJM",
+      "indexSize": 2293736
+    },
+    {
+      "range": "023850795-023856565",
+      "bloomHash": "Qmdd9ZiaEmMLL9TJvcdRf6Vk5mpkefm8rSNzNMLiq1ggMq",
+      "bloomSize": 131080,
+      "indexHash": "QmTUsSnn3ybHYzTrkBgV3jVaVPJbXJ4BocSKF22qEvCVag",
+      "indexSize": 2279388
+    },
+    {
+      "range": "023856566-023863739",
+      "bloomHash": "QmQisbxqmYCVRnuLvvNBqNYTCo3aG63pFxSagoFnno3EoQ",
+      "bloomSize": 131080,
+      "indexHash": "Qmbk3QH7rRwPxA3XUTtq1BKuRAv2Vxvke1aXfBeQUCMaQc",
+      "indexSize": 2259808
+    },
+    {
+      "range": "023863740-023869765",
+      "bloomHash": "QmXBDk98Ws66TneEPsquDxRRYWo16u5j878KRmP3v9xTHH",
+      "bloomSize": 131080,
+      "indexHash": "QmZriReTnv66rA46ZY62N7EmPq2j11ff1bai9J5iKZpDpg",
+      "indexSize": 2320900
+    },
+    {
+      "range": "023869766-023876556",
+      "bloomHash": "Qmd2GEVgf3wTCwkZWzBHEnzCepjtKooW88QaRveX4BvjiQ",
+      "bloomSize": 131080,
+      "indexHash": "QmPqKVvCuJwsHcAgJrbQuXq7eGdykbnp7iSxxyFMCzUNJs",
+      "indexSize": 2282836
+    },
+    {
+      "range": "023876557-023883310",
+      "bloomHash": "QmfSUHNNXAJuM1e7YDYmKNzuJdsTstPfrkJsGJVfPz2gYf",
+      "bloomSize": 131080,
+      "indexHash": "QmaZBLvPTvWV19akYzRfHnrq1rvqQ1XteKsA1cKmXo7qkd",
+      "indexSize": 2308520
+    },
+    {
+      "range": "023883311-023889726",
+      "bloomHash": "QmTimbBJ5pSQSPKxVUZEayBJKLrVp3TLfnCBmYLFjfb9XE",
+      "bloomSize": 131080,
+      "indexHash": "QmPDAcsEiJbXMHwGbrWeTpBpWRi9d6bTpDHcdZwcRLC93C",
+      "indexSize": 2392100
+    },
+    {
+      "range": "023889727-023896680",
+      "bloomHash": "QmWSKYM3Nz77iPet2cTiY6AB53K2wpgXGo4YHvLZeCV55M",
+      "bloomSize": 131080,
+      "indexHash": "QmU7uA2QG3KR1BHR3USPDuVMy6vfk38amLDXZYZZhDkgPu",
+      "indexSize": 2272648
+    },
+    {
+      "range": "023896681-023901264",
+      "bloomHash": "QmVn2AAPQUYFUwniB2DvVSkCpeg2hxexKJMGEQjmL6YZEQ",
+      "bloomSize": 131080,
+      "indexHash": "QmaC2u8LeAkzg6JHGCHpCqdXXi2gdA2BMtpY5vMocjpX4A",
+      "indexSize": 2284708
+    },
+    {
+      "range": "023901265-023906408",
+      "bloomHash": "QmdgjrGjauRxHreeJcVMkGMRXcpMUqCEhYzQieb3VUiDyH",
+      "bloomSize": 131080,
+      "indexHash": "QmPSFmMQ69KzJ9kxpTwrc62gvTU7J6CF1MxGpxbUWfrynt",
+      "indexSize": 2304820
+    },
+    {
+      "range": "023906409-023911848",
+      "bloomHash": "QmbHsnZyKXSsKLHgT4bLsJwpUYztnKZLNjUnb6QwLUDK5n",
+      "bloomSize": 131080,
+      "indexHash": "QmS9oc3TREggtmvvQe54vVRx7WNQMPK8iykUMAHYgwUwa6",
+      "indexSize": 2279864
+    },
+    {
+      "range": "023911849-023917309",
+      "bloomHash": "QmahrZLMLcN6BSaNcoFVBMvWJtENzZ9hM2qrPbhpAvDpKV",
+      "bloomSize": 131080,
+      "indexHash": "QmUKp9TajjG7X8rF27tbCbCGv8JTxEnTEPZzYK5qMZQgKh",
+      "indexSize": 2248828
+    },
+    {
+      "range": "023917310-023921701",
+      "bloomHash": "QmWmqMm6uE4QAT8pCVWX6TtS8MdtkLxZqzQrdiPbkWMA1z",
+      "bloomSize": 131080,
+      "indexHash": "QmV26i6i3cKa8JuQmdYgKaeHZutAdRASroL3xrh4LAkMTg",
+      "indexSize": 2228632
+    },
+    {
+      "range": "023921702-023928157",
+      "bloomHash": "QmQ3rXXAuYRZCqXjiJb6LC3V9ZgTTKZ3Z7bBoXFE9F5YxH",
+      "bloomSize": 131080,
+      "indexHash": "QmPcrQwNqLqQX2guz5FsQtrF3RAcbWBx3MNwpcyj6AmhvQ",
+      "indexSize": 2232364
+    },
+    {
+      "range": "023928158-023933672",
+      "bloomHash": "QmQhaoQ2Tqxv2iFn2sR8HQFUkt2uVP5UCxBcje1YipT39v",
+      "bloomSize": 131080,
+      "indexHash": "QmWvY6FeUVFFLnFMc6gTSyxpqBLtDsS4A2QdRMNHmmHN16",
+      "indexSize": 2323872
     }
   ]
 }
