--- a/src/other/install/per-chain/sepolia/manifest.json
+++ b/src/other/install/per-chain/sepolia/manifest.json
@@ -2,7 +2,7 @@
   "version": "trueblocks-core@v0.40.0",
   "chain": "sepolia",
   "schemas": "QmUou7zX2g2tY58LP1A2GyP5RF9nbJsoxKTp299ah3svgb",
-  "databases": "Qma3FXEBy6fW3m3pehNqEAPKqMbW6ESMVRmuZbh28qnx7n",
+  "databases": "QmTGdjLhWzGpGtmxVu73mzKyzva9JM4mSsZ93NceVU6Y5T",
   "chunks": [
     {
       "range": "000000000-000000000",
@@ -255,6 +255,41 @@
       "bloomSize": 131080,
       "indexHash": "QmXZpYiLC7LNRh9DWpxg9Un9Hf4R54uGr32WL866MM6Wmg",
       "indexSize": 1804420
+    },
+    {
+      "range": "001715707-001739952",
+      "bloomHash": "QmTszxBKJK5w1hDnWa1twGebJeEmy9g72db1yNud7E37XJ",
+      "bloomSize": 131080,
+      "indexHash": "QmQb2uZw4PpUBhekb9X8GAFD6DKaSKmFhyfP381ccB76cz",
+      "indexSize": 1713212
+    },
+    {
+      "range": "001739953-001760972",
+      "bloomHash": "Qmede9s1AQzE4H16Vor8t8T6FVTLCMwGMxEFo5L7ucPphM",
+      "bloomSize": 131080,
+      "indexHash": "QmQywEMMCReoWTVFTK2vqBwcGGHRUH3vYnbp3HUEG7JP4v",
+      "indexSize": 1778028
+    },
+    {
+      "range": "001760973-001778731",
+      "bloomHash": "QmexXiSqC5rZ4MCjUBx5uQfq5SiugrfRvVwCfQ9krFcXNH",
+      "bloomSize": 131080,
+      "indexHash": "QmeyjoM2ZPd6AHFjUKuVMu1dg5uy82L33uo4uBns2geiLU",
+      "indexSize": 1945400
+    },
+    {
+      "range": "001778732-001791805",
+      "bloomHash": "QmP9ojVp2YbGvGh7sfQ1oSLFARu8FNmkYpuAtzjUbpiEuV",
+      "bloomSize": 131080,
+      "indexHash": "QmYfzMEz1JYDeWvYqauYyTbX9sNBk8FMXybXpSqQxNhdz7",
+      "indexSize": 1725016
+    },
+    {
+      "range": "001791806-001800000",
+      "bloomHash": "QmYmJRtHcgbFuaaJKwQA35JsdCiNUmF7a3nAEsWSfmqMRC",
+      "bloomSize": 131080,
+      "indexHash": "QmYKvvekK2FJM3t89ChtKsbr6pzVzX7VKiDus4QbyGEQ2J",
+      "indexSize": 776904
     }
   ]
 }
