Moves WalkIndexFolder to index package, so we can use it elsewhere

--- a/src/other/install/trueBlocks.toml
+++ b/src/other/install/trueBlocks.toml
@@ -4,8 +4,8 @@ current = "0.40.0-beta"
 [settings]
 cachePath = ""
 defaultChain = "mainnet"
+defaultGateway = "https://ipfs.unchainedindex.io/ipfs/"
 indexPath = ""
-defaultGateway = "https://[{CHAIN}].unchainedindex.io/ipfs/"
 
 [keys]
 
@@ -28,7 +28,6 @@ chainId = "1"
 localExplorer = "http://localhost:1234"
 remoteExplorer = "https://etherscan.io"
 rpcProvider = "http://localhost:8545"
-ipfsGateway = "https://ipfs.unchainedindex.io/ipfs/"
 symbol = "ETH"
 
 [chains.gnosis]
