--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -21596,6 +21596,55 @@
       "bloomSize": 1048646,
       "indexHash": "QmR2oUUHdsxDddWk2KUWLR34s1vJXQDC5U7rHJhtfRwvcF",
       "indexSize": 26760724
+    },
+    {
+      "range": "015497487-015500000",
+      "bloomHash": "QmbyPtbSeWcAu8ANKsUfzA9YKcuFhHJrAXBEnRVQ9WfvED",
+      "bloomSize": 786494,
+      "indexHash": "QmNqsmkBnGMMkjLr6xjtBGpG8AViWwYwEua9VtZgXj3uH3",
+      "indexSize": 21190176
+    },
+    {
+      "range": "015500001-015502880",
+      "bloomHash": "QmZYdv3Sgsk4hV3UMfFvGrPPZChJEePYpeTSe2zTMq5cqb",
+      "bloomSize": 1048646,
+      "indexHash": "QmTDRqzm3cgjYd8SkvJLf17UUpWQZsQooW53iUtHE45ArZ",
+      "indexSize": 26733212
+    },
+    {
+      "range": "015502881-015505775",
+      "bloomHash": "QmbzMVvsNtzyNJaAh1wu2diGHRrmgnKsW8YxczYCLCU5yU",
+      "bloomSize": 917570,
+      "indexHash": "QmPqzYxXbHzYHHwBze9w13Djw5dBW3QBEcEFGzK89tZBWA",
+      "indexSize": 25208524
+    },
+    {
+      "range": "015505776-015508865",
+      "bloomHash": "Qmc57zb5YvWKpTHHdy3yjUePum3ESB2HNt6qfQhnoeaqmA",
+      "bloomSize": 1048646,
+      "indexHash": "Qma3C8xzzxAXxHxed8UNuJAFpt2opMeWXLdYe4XbNpihCE",
+      "indexSize": 26685160
+    },
+    {
+      "range": "015508866-015511829",
+      "bloomHash": "QmRmbdrnmLiqJbzv4qE7Z3CNotb2QBELjc8wnPLhSxuyyk",
+      "bloomSize": 917570,
+      "indexHash": "Qmegr6DCEQ6Si1FZbbRZJFhXWM9hWbG7PnYcEGFGkPuJuB",
+      "indexSize": 25152276
+    },
+    {
+      "range": "015511830-015514798",
+      "bloomHash": "QmQgpRsXrQ5vyZtv68zSLVokguCHVtjMxK8SvvkzrfW4TF",
+      "bloomSize": 1048646,
+      "indexHash": "QmfC2nu7oeGeXcLvQakyQmPKjQhznyBmmsrvp3VWEMp8pt",
+      "indexSize": 26043444
+    },
+    {
+      "range": "015514799-015517726",
+      "bloomHash": "QmY2CsXg3EEFU9ARSYaBbk4daYFUVgTPNLbZSkqZZ1CSJC",
+      "bloomSize": 917570,
+      "indexHash": "QmPnMdGYjXQBBQhYPgYBQforMq4SbfDSmcHS5iFdhNLfNb",
+      "indexSize": 24869516
     }
   ]
 }
