--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -21652,6 +21652,34 @@
       "bloomSize": 917570,
       "indexHash": "QmVzoSCGBf3Kqiz3qqFieXXmNDcfCS67hAzRyJWmpc2ru8",
       "indexSize": 25643152
+    },
+    {
+      "range": "015520568-015523434",
+      "bloomHash": "QmXZaiwRuV8Bm2d3HEWm87uYtqAusFofWUFasF9FVvyxdF",
+      "bloomSize": 917570,
+      "indexHash": "QmYwHwTrAyseGEx11iCXnewA7jWPKi4tqW1wWzathDvwph",
+      "indexSize": 25046732
+    },
+    {
+      "range": "015523435-015526227",
+      "bloomHash": "QmS8WcDDrixVYtdofeTpRpS5usS7dRuCh7wXXiRSUcSQrJ",
+      "bloomSize": 1179722,
+      "indexHash": "QmfRLHnqV5yJLBeWdrGQ46BKNMeHvvejZ61mysDdQq1yKp",
+      "indexSize": 27277124
+    },
+    {
+      "range": "015526228-015528907",
+      "bloomHash": "QmTKmyM1P6f2BdnxJgPtY4TowYNT5685r9LP8xbnJPfpVY",
+      "bloomSize": 917570,
+      "indexHash": "QmWxTCDajAbCCvFKkTEDUFNgE2PoqjjfhRuP7acpKpZrgt",
+      "indexSize": 25602708
+    },
+    {
+      "range": "015528908-015531843",
+      "bloomHash": "QmbA7WXV6vFeWZ5YdCDjU9LsfJiCqCV4jvYDP5SPSxRP1R",
+      "bloomSize": 1048646,
+      "indexHash": "QmWdwAx5dK5Jw8iQ8XcUnRq6sve8NfYhC8FgpRCtKDew9r",
+      "indexSize": 26238680
     }
   ]
 }
