--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -21680,6 +21680,20 @@
       "bloomSize": 1048646,
       "indexHash": "QmWdwAx5dK5Jw8iQ8XcUnRq6sve8NfYhC8FgpRCtKDew9r",
       "indexSize": 26238680
+    },
+    {
+      "range": "015531844-015534579",
+      "bloomHash": "QmdqTX8UHLUDfiwXSvEtuE2JL7JGpyGHtmXAAWa9VCCXV8",
+      "bloomSize": 1048646,
+      "indexHash": "QmPcCYjdb5qh6sooLZYWkVgCZRgLSs86EzRpoU7rkDg4EL",
+      "indexSize": 26625508
+    },
+    {
+      "range": "015534580-015537387",
+      "bloomHash": "QmQ92QWcXJG14rnjwFKt68TZKwxtQyyVi3Pg5gwwbmqmUs",
+      "bloomSize": 1179722,
+      "indexHash": "Qmb1ES8iXoLqsDxEXGrJy2JfgPLxsPH65NjcXFkxPPAzWK",
+      "indexSize": 27409032
     }
   ]
 }
