--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -21694,6 +21694,20 @@
       "bloomSize": 1179722,
       "indexHash": "Qmb1ES8iXoLqsDxEXGrJy2JfgPLxsPH65NjcXFkxPPAzWK",
       "indexSize": 27409032
+    },
+    {
+      "range": "015537388-015540261",
+      "bloomHash": "Qme77inzj261cyc9MWgXr7fjaJ5nq9iBCiTNxNvLhQuP6c",
+      "bloomSize": 1179722,
+      "indexHash": "Qmah2m8DZhX495BcbhSWZJMkhWjWueP9mUncaJ3bC2Sjk4",
+      "indexSize": 27540784
+    },
+    {
+      "range": "015540262-015543012",
+      "bloomHash": "QmREppZ3skUSFBtNQhyb5RH5b3NskadefgtkQRPkxCnJyo",
+      "bloomSize": 1179722,
+      "indexHash": "QmTCx6PpspZ72GtSVRzp4edC8yR6vnxr6dwYh4qD6uUDEN",
+      "indexSize": 27588120
     }
   ]
 }
