--- a/src/other/install/per-chain/gnosis/manifest.json
+++ b/src/other/install/per-chain/gnosis/manifest.json
@@ -7835,6 +7835,20 @@
       "bloomSize": 131114,
       "indexHash": "QmeDaCLd6uSq4VkBipq55RQuwsq6oX1WoKqZWeo1NDq6A5",
       "indexSize": 3444236
+    },
+    {
+      "range": "024200001-024214530",
+      "bloomHash": "QmTDXD1TnH5wKQtjreAU7htmSB53waeHyRXk8m6nDExsMG",
+      "bloomSize": 131114,
+      "indexHash": "QmdiVT3JVzg5sfBZW3tsg1AcEPJV4foqDonHgiXYnUcgwc",
+      "indexSize": 7004540
+    },
+    {
+      "range": "024214531-024229809",
+      "bloomHash": "QmPs64AH5K1j6ZsMqV4f7P7KuEwHdepYbUc5gqQTR3gbA2",
+      "bloomSize": 131114,
+      "indexHash": "QmUBtb7bEic3G6tnGFcA7uBRk3hfJ1aK5fFYWWqfGMXnwZ",
+      "indexSize": 7277632
     }
   ]
 }
