--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -21708,6 +21708,34 @@
       "bloomSize": 1179722,
       "indexHash": "QmTCx6PpspZ72GtSVRzp4edC8yR6vnxr6dwYh4qD6uUDEN",
       "indexSize": 27588120
+    },
+    {
+      "range": "015543013-015545771",
+      "bloomHash": "QmaZhSA97BCQA28zGkUsKPWThQ4RLWafmLd89UmBxWwLZP",
+      "bloomSize": 1310798,
+      "indexHash": "QmRwYQ5GSctULYM7b6A4tSXU1qdmRwCJ6VGQKhAxHk5j2Z",
+      "indexSize": 29430700
+    },
+    {
+      "range": "015545772-015548563",
+      "bloomHash": "QmdRDW6DQC8zVntj3fG1DhKsQHDTcXQW4ePzsX96MKHjZv",
+      "bloomSize": 1048646,
+      "indexHash": "QmTQJdccdacWqSEN2B8ZN4n8VMVsGQ4scBe67qfZdZVk4Z",
+      "indexSize": 26312836
+    },
+    {
+      "range": "015548564-015551455",
+      "bloomHash": "QmYUq5sXcsgdxok5eqJGtnFrGC8xKSKCgQzvoTuao9t9zS",
+      "bloomSize": 1179722,
+      "indexHash": "QmV94GUvprHkWLk1GwDEUYxQSdghvQTeE9PLW1KLokyrsT",
+      "indexSize": 28424908
+    },
+    {
+      "range": "015551456-015554050",
+      "bloomHash": "QmdVWbjvXBJQ4ii7yLiYc9XSX4x6pbJsyG3h3K9Aqv8DWm",
+      "bloomSize": 1441874,
+      "indexHash": "QmYFmgLuJwgi1XbYbhQk1fF7TCnmtiBVHzcphGTZvzA5Fe",
+      "indexSize": 30629196
     }
   ]
 }
