Removes entirely the cachelib code into the cacheStatus tool in prep for deletion of that CPP code.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,15 +56,14 @@ endif()
 
 # ----------------------------------------------------------------------------------------
 # Linkable libraries
-set(BASE_LIBS cache acct ether util ${CURL_LIBRARIES})
+set(BASE_LIBS acct ether util ${CURL_LIBRARIES})
 
 # ----------------------------------------------------------------------------------------
 # Base included paths
 set(BASE_INCLUDE
     "${CMAKE_SOURCE_DIR}/libs/utillib"
     "${CMAKE_SOURCE_DIR}/libs/etherlib"
-    "${CMAKE_SOURCE_DIR}/libs/acctlib"
-    "${CMAKE_SOURCE_DIR}/libs/cachelib")
+    "${CMAKE_SOURCE_DIR}/libs/acctlib")
 
 # ----------------------------------------------------------------------------------------
 set(BIN_DIR ${CMAKE_SOURCE_DIR}/../bin)
