--- a/docs/readmes/admin-scrape.config
+++ b/docs/readmes/admin-scrape.config
@@ -5,4 +5,4 @@
 | first&lowbar;snap  | uint64       | 0            | the first block at which snap_to_grid is enabled |
 | unripe&lowbar;dist | uint64       | 28           | the distance (in blocks) from the front of the chain under which (inclusive) a block is considered unripe |
 | channel&lowbar;count | uint64       | 20           | number of concurrent processing channels |
-| allow&lowbar;missing | bool         | false        | do not report errors for blockchains that contain blocks with zero addresses |
+| allow&lowbar;missing | bool         | true         | do not report errors for blockchains that contain blocks with zero addresses |
