--- a/src/other/install/per-chain/gnosis/manifest.json
+++ b/src/other/install/per-chain/gnosis/manifest.json
@@ -7884,6 +7884,13 @@
       "bloomSize": 131114,
       "indexHash": "QmPouc1WxxdUAnG81qYMRxZFmuU62e3ZvaEW1rqcjnuNYm",
       "indexSize": 6831788
+    },
+    {
+      "range": "024289969-024300000",
+      "bloomHash": "QmUpof9QxNeqrpVnvwdhcuJxPgh3U3me64gMCTWpjFqtPD",
+      "bloomSize": 131114,
+      "indexHash": "QmPHZWnPY3rLnHVRxcJxvXUkW3rHYGaUzDk5v2ZKv53Eq9",
+      "indexSize": 4485440
     }
   ]
 }
