--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -27,7 +27,7 @@ jobs:
           version: v1.29
 
           # Optional: working directory, useful for monorepos
-          # working-directory: somedir
+          working-directory: src/apps/chifra
 
           # Optional: golangci-lint command line arguments.
           # args: --issues-exit-code=0
