--- a/src/other/install/per-chain/sepolia/manifest.json
+++ b/src/other/install/per-chain/sepolia/manifest.json
@@ -312,6 +312,13 @@
       "indexSize": 1667496
     },
     {
+      "range": "001854065-001881131",
+      "bloomHash": "QmV8nWbEoALHQLfhrE9dy9gt3Y74LJHx8rAjkjXNwf7ntF",
+      "bloomSize": 131114,
+      "indexHash": "QmZ36Vw88Xsz3kLJThdD7FEQ5sGHHDbeXwBaAkdfrizvHS",
+      "indexSize": 1672792
+    },
+    {
       "range": "001881132-001900000",
       "bloomHash": "QmPyjZBQ386Bb8VmwWqru3DLv7jWqjDmhH44TAHz6TAZBu",
       "bloomSize": 131114,
